# segment-data-generator

./: LICENSE  README.md  pyproject.toml  requirements.txt
segment_data_generator/: run.py  utils.py
tests/: test_segment_data_generator.py
